header alignment fix

--- a/frontend/src/style/themes/gleam.css
+++ b/frontend/src/style/themes/gleam.css
@@ -127,6 +127,15 @@
   text-align: center;
   max-width: 728px;
 }
+
+/* header alignment feature backwards compatibility */
+.gleam.form .header.label.undefined {
+  text-align: center;
+}
+.gleam.form .header.sublabel.undefined {
+  text-align: center;
+}
+
 .gleam.form .header.label span {
   font-family: Montserrat;
   padding: 3px 5px;
